--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ Django==3.2.8
 django-filter==21.1
 djangorestframework==3.12.4
 djangorestframework-csv==2.1.1
+numpy==1.21.2
+pandas==1.3.3
+python-dateutil==2.8.2
 pytz==2021.3
 six==1.16.0
 sqlparse==0.4.2
